# Turn_based_game

./: .gitmodules  CMakeLists.txt  README.md
game_api/: CMakeLists.txt
game_api/include/: playground.h
game_api/src/: playground.cc
game_api/tmp/: game.cc
include/: const.h
main/: client.cc  server.cc
